--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.11.0",
+    "@tanstack/react-query": "^5.90.20",
+    "axios": "^1.13.4",
     "expo": "~54.0.32",
+    "expo-location": "~19.0.8",
+    "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-hook-form": "^7.71.1",
+    "react-native": "0.81.5",
+    "react-native-maps": "^1.26.20",
+    "react-native-qrcode-svg": "^6.3.21",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.20.0",
+    "react-native-svg": "^15.15.1",
+    "uuid": "^13.0.0",
+    "zod": "^4.3.6",
+    "zustand": "^5.0.10"
   },
   "private": true
 }
