--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
     "expo-location": "~19.0.8",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "immer": "^11.1.3",
     "react": "19.1.0",
     "react-hook-form": "^7.71.1",
     "react-native": "0.81.5",
-    "react-native-maps": "^1.26.20",
+    "react-native-maps": "^1.20.1",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.20.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.12.1",
     "uuid": "^13.0.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
+  }
 }
