--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.1.0",
     "react-hook-form": "^7.71.1",
     "react-native": "0.81.5",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-maps": "^1.20.1",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-safe-area-context": "^5.6.2",
