--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
     "expo": "~54.0.32",
+    "expo-auth-session": "~6.0.0",
+    "expo-camera": "~17.0.10",
+    "expo-crypto": "~14.0.0",
+    "expo-localization": "^17.0.8",
     "expo-location": "~19.0.8",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~14.0.0",
+    "i18next": "^25.8.4",
     "immer": "^11.1.3",
+    "intl-pluralrules": "^2.0.1",
     "react": "19.1.0",
     "react-hook-form": "^7.71.1",
+    "react-i18next": "^16.5.4",
     "react-native": "0.81.5",
     "react-native-get-random-values": "^2.0.0",
     "react-native-maps": "^1.20.1",
@@ -37,6 +46,7 @@
   "private": true,
   "devDependencies": {
     "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
     "typescript": "~5.9.2"
   }
 }
