--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,13 @@ EXPO_PUBLIC_API_URL=https://mazzapro-back-production.up.railway.app/api/v1
 # Get your keys from: https://console.cloud.google.com/
 EXPO_PUBLIC_GOOGLE_MAPS_API_KEY_ANDROID=your_android_key_here
 EXPO_PUBLIC_GOOGLE_MAPS_API_KEY_IOS=your_ios_key_here
+
+# Google OAuth Client IDs (for "Continue with Google")
+# 1. Go to https://console.cloud.google.com/apis/credentials
+# 2. Create an OAuth 2.0 "Web application" client
+#    - Add authorized redirect URI: https://auth.expo.io/@your-expo-username/mazza-frontend
+# 3. (Optional) Create an "Android" client with your SHA-1 fingerprint for standalone builds
+# 4. (Optional) Create an "iOS" client with your bundle ID for standalone builds
+EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=your_web_client_id.apps.googleusercontent.com
+EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID=your_ios_client_id.apps.googleusercontent.com
+EXPO_PUBLIC_GOOGLE_ANDROID_CLIENT_ID=your_android_client_id.apps.googleusercontent.com
