--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-auth-session": "~6.0.0",
     "expo-camera": "~17.0.10",
     "expo-crypto": "~14.0.0",
+    "expo-linear-gradient": "~15.0.8",
     "expo-localization": "^17.0.8",
     "expo-location": "~19.0.8",
     "expo-secure-store": "^15.0.8",
